syntax = "proto3";

package models;

option go_package = "./internal/models";

message TradeStatsProto {
    string symbol = 1;
    double price = 2;
    double avg_price = 3;
    double min_price = 4;
    double max_price = 5;
}


message MarketUpdateProto {
    repeated TradeStatsProto stats = 1;
}
